- Make child windows open on top, when always on top is checked (hairycactus). Form1.ShowModal;

- Make sure that 32 bit PNG images with few colors, keep transparency when converted to 8 bit PNG files (Newtomic).

- En rollover de grid poner el hint de su string y sin showparenthint.

- The ability to specify an output directory (Runner112).

- Truncate filenames in cell draw.

- Add ffmpeg
	KS_EXTENSION_MP4
	KS_EXTENSION_MPEG: AVI, MPG, MPEG
	KS_EXTENSION_FLV: FLV
	KS_EXTENSION_WMV: WMV, WMA 
	KS_EXTENSION_RM: RV, RA, RM, RMVB, RAM. SMIL
	ffmpeg.exe -i INPUT -vcodec copy -acodec copy OUTPUT


- Add Information option on context menu.

- Optimize GetExtensionByContent to use regular comparisons instead of memcmp for short comparisons.

- Make quick access customized buttons permanent in ribbon, as well as its visibility and size (Newatomic).

- Add an option to choose between ribbon interface and regular Windows menus (Newatomic).

- Password protected PDF files generate empty PDF files after optimization (sambufalo).

- rehuff corrupt OGG files when run several times (Tomasz W.).

- Add huffmix.exe, pngzopfli.exe and zopfli.exe (http://encode.ru/threads/1717-ZopfliPNG) to the PNG chain. Zopflipng should not be needed since is already in use by Leanify (telegenesis).

- Running jpg > arith jpg and then result file again into arith jpg reduces it further (necros).
- Make png option to strip iend chunk (end-of-image marker) used in entropymine.com/jason/tweakpng/, same goes to jpg with jstrip option to remove JFIF header (necros)
- Add m7zRepacker (for 7-Zip V9.20) // V1.0.32.301 // (C) 2010-2011 Mario Scholz to optimize 7z archives (necros)
- Use zopfli --i1 --gzip for GZIP optimization

- Consider using ZopfliPNG for better PNG results, maybe as substitute for advpng (Vivil).

- Remove obsolete plugins with Leanify; ADV*, mozjpegtran, zRecompress, ...

- Add GUI options for bBMPCopyMetadata, bGIFCopyMetadata, bMiscCopyMetadata, bPCXCopyMetadata, bTIFFCopyMetadata
